# libadic

./: .gitignore  .project_structure  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  Dockerfile  IMPLEMENTATION_OUTLINE.md  INSTALL.md  MATHEMATICAL_NOTES.md  QUICK_START.md  README.md  RESPONSE_TO_FEEDBACK.md  SECURITY.md  docker-compose.yml  generate_docs.py  pyproject.toml  run_demo.sh  setup.py  validate_mathematics.cpp
.github/workflows/: ci.yml
debian/: changelog  control  copyright  libadic-dev.install  libadic1.install  rules
docs/: API_REFERENCE.md  CLAUDE.md  USER_GUIDE.md  tutorial.ipynb
docs/validation/: README.md  run_validation.sh
include/libadic/: bernoulli.h  characters.h  cyclotomic.h  gmp_wrapper.h  iwasawa_log.h  l_functions.h  padic_gamma.h  padic_log.h  qp.h  zp.h
python/libadic/: __init__.py
python/src/: bind_bigint.cpp  bind_qp.cpp  bind_zp.cpp  libadic_python.cpp
scripts/: build_deb.sh  setup_ppa.sh
src/functions/: characters.cpp  l_functions.cpp
tests/: milestone1_test.cpp  test_functions.cpp  test_gmp_wrapper.cpp
tests/python/: README.md  test_reid_li_criterion.py
validation/comparison_tests/: pari_gp_cannot_compute.gp  sagemath_missing_features.sage
validation/results/: compute_reid_li_results.cpp
