[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cmake>=3.14",
    "ninja; sys_platform != 'win32'",
]
build-backend = "setuptools.build_meta"

[project]
name = "libadic"
version = "1.0.0"
description = "High-performance p-adic arithmetic library for the Reid-Li criterion"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Reid-Li Team", email = "asmith@example.com"},
]
maintainers = [
    {name = "A. Smith", email = "asmith@example.com"},
]
keywords = [
    "p-adic",
    "number theory",
    "mathematics",
    "riemann hypothesis",
    "reid-li",
    "arithmetic",
    "gamma function",
    "L-functions",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "flake8",
]
notebooks = [
    "jupyter",
    "matplotlib",
    "scipy",
    "sympy",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]

[project.urls]
Homepage = "https://github.com/yourusername/libadic"
Documentation = "https://libadic.readthedocs.io"
Repository = "https://github.com/yourusername/libadic.git"
"Bug Tracker" = "https://github.com/yourusername/libadic/issues"
Changelog = "https://github.com/yourusername/libadic/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["libadic"]
package-dir = {"libadic" = "python/libadic"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "python/tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    build
  | dist
  | extern
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.coverage.run]
source = ["libadic"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]